assets/css/style.css
* {
  font-family: "Roboto", sans-serif;
}

#com-dropdown {
  max-height: 250px; 
  overflow: auto;
}

.header {
  text-align: center;
  background-color: #1c3879;
  color: #f9f5eb;
  padding: 40px;
}

nav {
  background-color: #607eaa;
  padding: 8px;
}

.main-container {
  padding-top: 40px;
}

#showCommHeader {
    text-align: center;
    color: #1c3879;
    font-weight: bolder;
}

#currentPrice {
    justify-content: space-evenly;
    color: #1c3879;
    font-weight: bolder;
}

.footer {
  text-align: center;
  background-color: #1c3879;
  color: #f9f5eb;
}

.my-custom-scrollbar {
  position: relative;
  height: 650px;
  overflow: auto;
}

.table-wrapper-scroll-y {
  display: block;
}

@media (max-width: 992px) {
  .container-fluid {
    width: 100%;
  }
}
/*
to do - header and nav full width, fetch commodities button text goes over color, aside overlapping graph happens below 1200px, center footer
  nav {
    width: 100%;
  }
  #fetch-button {
    
  }
  .col-4 {

  }
  .footer {
    
  }
} */

